--- a/package.yaml
+++ b/package.yaml
@@ -20,6 +20,10 @@ description:         Please see the README on GitHub at <https://github.com/gith
 
 dependencies:
 - base >= 4.7 && < 5
+- hslogger == 1.3.1.0
+- http-types == 0.12.3
+- wai == 3.2.2.1
+- warp == 3.3.13
 
 ghc-options:
 - -Wall
