--- a/package.yaml
+++ b/package.yaml
@@ -24,7 +24,11 @@ dependencies:
 - http-types == 0.12.3
 - wai == 3.2.2.1
 - warp == 3.3.13
-- hasql == 1.4.3
+- hasql >= 1.4.4
+- hasql-th
+- postgresql-syntax
+- fast-builder
+- headed-megaparsec
 
 ghc-options:
 - -Wall
