--- a/package.yaml
+++ b/package.yaml
@@ -22,14 +22,16 @@ dependencies:
 - base >= 4.7 && < 5
 - hslogger == 1.3.1.0
 - http-types == 0.12.3
+- text
+- utf8-string
 - wai == 3.2.2.1
 - warp == 3.3.13
 - hasql >= 1.4.4
+# hasql dependencies
 - hasql-th
 - postgresql-syntax
 - fast-builder
 - headed-megaparsec
-- utf8-string
 
 ghc-options:
 - -Wall
