--- a/package.yaml
+++ b/package.yaml
@@ -19,10 +19,13 @@ extra-source-files:
 description:         Please see the README on GitHub at <https://github.com/githubuser/rest-news#readme>
 
 dependencies:
+- aeson == 1.5.3.0
 - base >= 4.7 && < 5
+- bytestring == 0.10.8.2
 - hslogger == 1.3.1.0
 - http-types == 0.12.3
 - text
+# to get text from pathInfo LBS
 - utf8-string
 - wai == 3.2.2.1
 - warp == 3.3.13
