--- a/package.yaml
+++ b/package.yaml
@@ -31,6 +31,7 @@ dependencies:
 - wai == 3.2.2.1
 - warp == 3.3.13
 - hasql >= 1.4.4
+- vector == 0.12.1.2
 # hasql dependencies
 - hasql-th
 - postgresql-syntax
