--- a/stack.yaml
+++ b/stack.yaml
@@ -39,6 +39,7 @@ extra-deps:
 - postgresql-syntax-0.3.0.2@sha256:f676be8eaade863bd5ea0a3bd0a60c05e0bf0c324a0cb2e05355fe684b879418,4169
 - fast-builder-0.1.2.0@sha256:d01db8a5f1ac262e2db0375c47e46660c67ad4145bef64cc7303ade096e461ee,2801
 - headed-megaparsec-0.1.0.4@sha256:2888428f8cee84088b196639a2b5d7741d98caaeaa7a68662e54031f0dbf4655,1569
+- wai-session-postgresql-0.2.1.2@sha256:ca84761cec1ffdf6dd476ae73a963c6b46d4ed1a1558b28748bfd48c5e016bde,1958
 
 # - acme-missiles-0.3
 # - git: https://github.com/commercialhaskell/stack.git
