--- a/package.yaml
+++ b/package.yaml
@@ -29,6 +29,7 @@ dependencies:
 # to get text from pathInfo LBS
 - utf8-string
 - wai == 3.2.2.1
+- wai-app-static
 - wai-session == 0.3.3
 - wai-session-postgresql == 0.2.1.2
 - postgresql-simple == 0.6.2
