--- a/package.yaml
+++ b/package.yaml
@@ -27,6 +27,7 @@ dependencies:
 - text
 - time
 - unordered-containers >= 0.2.12.0
+- config-ini == 0.2.4.0
 # to get text from pathInfo LBS
 - utf8-string
 - wai == 3.2.2.1
