--- a/package.yaml
+++ b/package.yaml
@@ -19,9 +19,9 @@ extra-source-files:
 description:         Please see the README on GitHub at <https://github.com/githubuser/rest-news#readme>
 
 dependencies:
-- aeson == 1.5.3.0
-- base >= 4.7 && < 5
-- bytestring == 0.10.10.0
+- aeson == 1.5.6.0
+- base == 4.14.3.0
+- bytestring == 0.10.12.0
 - hslogger == 1.3.1.0
 - http-types == 0.12.3
 - text
@@ -30,21 +30,21 @@ dependencies:
 - config-ini == 0.2.4.0
 # to get text from pathInfo LBS
 - utf8-string
-- wai == 3.2.2.1
+- wai == 3.2.3
 - wai-app-static
 - wai-extra == 3.1.6
 - wai-session == 0.3.3
 - wai-session-postgresql == 0.2.1.2
-- postgresql-simple == 0.6.2
-- vault == 0.3.1.4
+- postgresql-simple == 0.6.4
+- vault == 0.3.1.5
 - cookie
-- warp == 3.3.13
+- warp == 3.3.17
 - hasql >= 1.4.4
-- vector == 0.12.1.2
+- vector == 0.12.3.1
 # hasql dependencies
 - hasql-th
 - postgresql-syntax
-- fast-builder
+- fast-builder # == 0.1.3.0
 - headed-megaparsec
 - util
 
@@ -54,7 +54,6 @@ ghc-options:
 - -Wall
 - -Wincomplete-uni-patterns
 #- -fwarn-monomorphism-restriction
-- -threaded
 
 library:
   source-dirs: src
@@ -81,4 +80,4 @@ tests:
     dependencies:
     - rest-news
     - hspec
-    - process == 1.6.9.0
+    - process == 1.6.13.2
