--- a/stack.yaml
+++ b/stack.yaml
@@ -17,7 +17,8 @@
 #
 # resolver: ./custom-snapshot.yaml
 # resolver: https://example.com/snapshots/2018-01-01.yaml
-resolver: nightly-2020-08-19
+resolver:
+    url: https://raw.githubusercontent.com/commercialhaskell/stackage-snapshots/master/lts/18/13.yaml
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -35,10 +36,12 @@ packages:
 # forks / in-progress versions pinned to a git hash. For example:
 #
 extra-deps:
-- hasql-th-0.4.0.8@sha256:e77af01c354fcebb0fc8358a4bb2f7b361329bce28f783d8d6b17fbd5fa43279,2245
-- postgresql-syntax-0.3.0.2@sha256:f676be8eaade863bd5ea0a3bd0a60c05e0bf0c324a0cb2e05355fe684b879418,4169
-- fast-builder-0.1.2.0@sha256:d01db8a5f1ac262e2db0375c47e46660c67ad4145bef64cc7303ade096e461ee,2801
-- headed-megaparsec-0.1.0.4@sha256:2888428f8cee84088b196639a2b5d7741d98caaeaa7a68662e54031f0dbf4655,1569
+# hasql-th-0.4.0.9
+- git: https://github.com/nikita-volkov/hasql-th.git
+  commit: 51bd5c97b186b66edcd54d710c4a50f8a4cd9713
+- postgresql-syntax-0.4@sha256:df8b65a33f4088eddad25cedbec814e5f34f8e8ae55065139b73bd6da0d66f21,4176
+- fast-builder-0.1.3.0@sha256:301a50188856ee88706c432c7d5c8c20f744a64a3cbf00346b8c84015c5ecac4,2802
+- headed-megaparsec-0.2.0.1@sha256:4bb2f1e68d2972e6b40ede202708c81b2e2fe83c454e439f27f47d1fdf7c8697,1571
 - wai-session-postgresql-0.2.1.2@sha256:ca84761cec1ffdf6dd476ae73a963c6b46d4ed1a1558b28748bfd48c5e016bde,1958
 
 # - acme-missiles-0.3
@@ -70,4 +73,4 @@ extra-deps:
 #
 # Allow a newer minor version of GHC than the snapshot specifies
 # compiler-check: newer-minor
-allow-newer: true
+# allow-newer: true
